--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,12 +1,7 @@
 <div class="header-root">
   <div class="header-wrap">
     <div class="header-container">
-      <div class="header-logo">
-        <img
-          class="header-logo-img"
-          src="/assets/image/5042ee99bf31a353449e27c5ce00c4fe.gif"
-          alt="logo"
-        />ViewKa
+      <div class="header-logo">ViewKa
       </div>
       <div class="header-user-profile"></div>
     </div>
