--- a/src/app/pages/message/message.component.scss
+++ b/src/app/pages/message/message.component.scss
@@ -6,6 +6,7 @@
     height: auto;
   }
   .list{
+    border-left: 1px solid #818181;
     background: #090C10;
     width: 400px;
     height: 100%;
