--- a/src/app/components/chat/chat.component.scss
+++ b/src/app/components/chat/chat.component.scss
@@ -11,6 +11,7 @@
   border: 1px solid #5e5e5e;
   border-radius: 20px;
   color: #bababa;
+
   .chat-header{
     width: 100%;
     height: 50px;
@@ -20,12 +21,15 @@
     background: #161B22;
     border-radius: 20px 20px 0 0;
     .chat-header-img{
-      background: white;
       margin: 10px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      border: 1px solid black;
+      overflow: hidden;
+      .header-img{
+        width: 100%;
+        height: 100%;
+      }
     }
     .chat-head{
       flex: 1;
@@ -38,10 +42,26 @@
     padding: 10px;
     background: #090C10;
     width: 100%;
-    min-height: 200px;
+    height: 200px;
     overflow: auto;
     display: flex;
-    align-items: flex-end;
+    flex-direction: column;
+    justify-content: end;
+    &::-webkit-scrollbar {
+      width: 5px;
+    }
+    &::-webkit-scrollbar-track {
+      box-shadow:  0 0 6px rgba(0, 0, 0, 0.3) inset;
+    }
+    &::-webkit-scrollbar-thumb {
+      background-color: darkgrey;
+      outline: 1px solid slategrey;
+    }
+    .chat-message{
+      height: 100%;
+      width: 100%;
+      flex: auto;
+    }
   }
   .chat-action{
     width: 100%;
@@ -61,6 +81,7 @@
           width: 100%;
           background: #000;
           color: white;
+          outline: none;
         }
       .chat-button{
         height: 30px;
