--- a/src/app/components/list-dialogues/list-dialogues.component.scss
+++ b/src/app/components/list-dialogues/list-dialogues.component.scss
@@ -1,11 +1,11 @@
 
 .list-wrap {
-  border: 1px solid #656565;
+
   height: 100%;
-  background: white;
+  background: #090C10;
   .list-text{
     padding: 5px;
-
+  color: white;
     font-size: 30px;
 
   }
@@ -19,12 +19,15 @@
     align-items: center;
     overflow: auto;
     .list-container-img {
-      background: white;
       margin: 10px;
       width: 40px;
       height: 40px;
       border-radius: 50%;
-      border: 1px solid black;
+      overflow: hidden;
+      .list-img{
+        width: 100%;
+        height: 100%;
+      }
     }
 
     .list-head {
